# F1tenth2024

./: README.md  vel_yaw_uros.ino
f1tenth_bringup/: package.xml  setup.py
f1tenth_bringup/config/: cartographer_config.lua  nav2_params.yaml  navigate_through_poses_w_replanning_and_recovery.xml  slam_toolbox_params.yaml
f1tenth_bringup/f1tenth_bringup/scripts/: follow_these_waypoints.py  follow_these_waypoints_repeatedly.py
f1tenth_bringup/launch/: cartographer_launch.py  f1tenth_bringup.launch.py  nav2_launch.py
vesc_ackermann/: package.xml
vesc_ackermann/include/vesc_ackermann/: vesc_to_odom.hpp
vesc_ackermann/src/: vesc_to_odom.cpp
vesc_driver/: CMakeLists.txt
vesc_driver/include/vesc_driver/: vesc_driver.hpp
vesc_driver/src/: vesc_driver.cpp
vesc_msgs/: CMakeLists.txt
