<package format="3">
  <name>f1tenth_bringup</name>
  <version>0.0.0</version>
  <description>Bringup for F1Tenth project</description>

  <maintainer email="yoodyui@yahoo.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>vesc_driver</exec_depend>
  <exec_depend>vesc_ackermann</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
